Added activities and permissions to manifest to support all sample apps.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="15" />
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.glass.samples.compass.CompassActivity"></activity>
+        <activity android:name="com.google.glass.samples.level.LevelActivity"></activity>
+        <activity android:name="com.google.glass.samples.stopwatch.StopWatchActivity"></activity>
+        <activity android:name="com.google.glass.samples.waveform.WaveformActivity"></activity>
     </application>
 
 </manifest>
